--- a/src/app/core/components/sidenav/sidenav.component.html
+++ b/src/app/core/components/sidenav/sidenav.component.html
@@ -170,14 +170,6 @@
                     <span class="font-medium text-sm" routerLinkActive="active-navlink">Cohorte</span>
                   </a>
                 </li>
-                <li>
-                  <a pRipple
-                    class="flex align-items-center cursor-pointer p-3 border-round text-700 hover:surface-100 transition-duration-150 transition-colors mb-2 ptb-14px"
-                    routerLinkActive="active-navlink">
-                    <i class="pi pi-chart-line mr-2" routerLinkActive="active-navlink"></i>
-                    <span class="font-medium text-sm" routerLinkActive="active-navlink">Statistiques</span>
-                  </a>
-                </li>
               </ul>
             </li>
           </ul>
@@ -354,7 +346,7 @@
             <path d="M4 18l16 0" />
           </svg>
         </a>
-        <div class="flex w-full align-items-center justify-content-between px-1">
+        <div class="flex w-full align-items-center justify-content-between px-1" style="margin-left: -22px">
           <span class="p-input-icon-left w-full">
             <i class="pi pi-search text-500"></i>
             <input type="text" pInputText placeholder="Rechercher" class="w-full border-none shadow-none outline-none"
